[build-system]
requires = ["setuptools>=68.0.0", "pybind11>=2.11.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spoa-modsecurity"
version = "1.0.0"
description = "HAProxy SPOA Filter for ModSecurity"
requires-python = ">=3.11"
dependencies = [
    "geoip2>=4.7.0",
    "pybind11>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "setuptools>=68.0.0",
]

[tool.setuptools]
py-modules = ["modsecurity", "check_geoip"]
